2017-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version
	(BugReports, URK): Added

	* src/parse.cpp (local_timegm): Restore parts of old behaviour

	* src/Makevars.win: Added

2017-01-03  Devin Pastoor  <devin.pastoor@gmail.com>

	* src/parse.cpp (local_timegm): On Windows, use Rcpp::mktime00 (as
	suggested by Dirk in GitHub Issue #5)
	
2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Release 0.0.5

2015-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

	* src/parse.cpp: Small accomodations for changed cpptoml.h

	* tests/float.toml: No longer attempt to parse double number which
	previously overflowed and is now rejected by cpptoml
	* tests/toml_example-v0.4.0.toml: Ditto
	* tests/float.Rout.save: Ditto
	* tests/tomlExamples.Rout.save: Ditto

2015-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.0.4

2015-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Minor update to upstream version

	* R/parseToml.R: Use utils::str() instead of str()

	* DESCRIPTION: More quoting of terms, rolled Version and Date

2015-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (collapsedList): Ensure list has content before
	iterating over it

2015-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.0.3

	* DESCRIPTION: More quoting of terms, rolled Version and Date, added URL

	* src/parse.cpp (local_timegm): Expand if defined() to Apple and BSDs

2015-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Renamed to RcppTOML, rolled Version and Date
	* NAMESPACE: Renamed to RcppTOML
	* README.md: Ditto
	* man/RcppTOML-package.Rd: Ditto
	* tests/*: Ditto

	* R/parseToml.R: Main function is parseTOML() now, keep aliases

	* README.md: Update current status, added Travis CI shield

	* man/RcppTOML-package.Rd: Expanded examples section and aliases

	* man/parseTOML.Rd: New manual page for main function