@@ -1,11 +1,13 @@
 2017-01-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): New minor version
-	(BugReports, URK): Added
+	(BugReports, URL): Added
 
 	* src/parse.cpp (local_timegm): Restore parts of old behaviour
 
 	* src/Makevars.win: Added
+
+	* .travis.yml: Use trusty, also dump logs on failure
 
 2017-01-03  Devin Pastoor  <devin.pastoor@gmail.com>
 
